# talks

./: README.md  pyproject.toml
presentations/python-class-tools/: codes.ipynb
