[tool.poetry]
name = "tech-talk-presentations"
version = "0.1.0"
description = ""
authors = ["Danial Keimasi <danialkeimasi@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
attrs = "^22.2.0"
pympler = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
